--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,77 @@
     background-position: center;
     background-size: cover; */
     
+.headerindex{
+    background-image: url("img/spainguide.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    
+    
+}
+
+.boton_Login {
+            text-decoration: none;
+            padding-top: 8px;
+            padding-bottom:  8px;
+            padding-left: 15px;
+            padding-right: 15px;
+            font-weight: 600;
+            font-size: 20px;
+            color: #EFFBF8;
+            background-color: #8A0829;
+            border-radius: 6px;
+            border: 2px solid #E6E6E6;
+            position: absolute;
+            top: 100px;
+            right: 180px;
+        }
+        
+.boton_help {
+    text-decoration: none;
+            padding-top: 18px;
+            padding-bottom:  18px;
+            padding-left: 15px;
+            padding-right: 15px;
+            font-weight: 600;
+            font-size: 20px;
+            color: #EFFBF8;
+            background-color: #8A0829;
+            border-radius: 6px;
+            border: 2px solid #E6E6E6;
+            position: absolute;
+            top: 100px;
+            right: 70px;
+    
+    
+}
+
+
+
+.log{
+    width:auto; 
+    height:250px;
+    left: 600px;
+    margin-bottom: -40px;
+    
+}
+.loguito{
+    width:auto; 
+    height:60%;
+    
+}
+
+
+
+a {
+    text-decoration: none;
+    color: #fff;
+    font-weight:300;
+    letter-spacing:1px;
+    text-transform:uppercase;
+    
+}
  
 .table{
     background-color: #fff;
@@ -62,10 +133,26 @@ p{
 h1, h2, h3{
 font-weight:300;
 letter-spacing:1px;
-text-transform:uppercase;
- 
+/*text-transform:uppercase;*/
+}
 
-    
+h6{
+    font-weight:100;
+    letter-spacing:1px;
+    padding-left: 50px;
+    margin-top: 0;
+    margin-bottom: -15px;
+}
+
+.header2{
+    margin-top: 0;
+    margin-bottom: 0px;
+    color: #fff;
+    font-size: 240%;
+    word-spacing: 4px;
+    padding-left: 30px;
+    padding-top: 20px;
+    font-family: 'Lato' , 'Arial' , sans-serif;
 }
 
 .header{
@@ -122,4 +209,9 @@ text-transform:uppercase;
 
 .btngroup{
     float:right;
+}
+
+
+.row{
+    
 }
