--- a/public/style.css
+++ b/public/style.css
@@ -47,8 +47,23 @@
             position: absolute;
             top: 100px;
             right: 70px;
-    
-    
+}
+
+.logout {
+    text-decoration: none;
+            padding-top: 18px;
+            padding-bottom:  18px;
+            padding-left: 15px;
+            padding-right: 15px;
+            font-weight: 600;
+            font-size: 20px;
+            color: #EFFBF8;
+            background-color: #8A0829;
+            border-radius: 6px;
+            border: 2px solid #E6E6E6;
+            position: absolute;
+            top: 70px;
+            right: 70px;
 }
 
 
