--- a/public/style.css
+++ b/public/style.css
@@ -49,7 +49,7 @@
             right: 70px;
 }
 
-.logout {
+.logoutindex {
     text-decoration: none;
             padding-top: 8px;
             padding-bottom:  8px;
@@ -62,8 +62,8 @@
             border-radius: 6px;
             border: 2px solid #E6E6E6;
             position: absolute;
-            top: 50px;
-            right: 30px;
+            top: 100px;
+            right: 10px;
 }
 
 
